--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "17.0.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
-    "react-router-dom": "6.0.2",
+    "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3"
   },
   "scripts": {
