--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
-}
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
+    "redirects": [{ "source": "/old-path", "destination": "/new-path", "permanent": true }],
+ 
+    
+    "builds": [
+      { "src": "next.config.js", "use": "@vercel/next" }
+    ],
+    "functions": {
+      "api/**/*.js": {
+        "runtime": "nodejs14.x",
+        "memory": 3008,
+        "maxDuration": 10
+      }
+    }
+  }
