--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.23.1",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
-   
+    "preview": "vite preview",
+   "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
