--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "vite",
-     "build": "react-scripts build",
+    "build": "vite build",
     "preview": "vite preview",
    "test": "react-scripts test",
     "eject": "react-scripts eject"
