--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
+    "@mui/styled-engine": "^5.15.14",
+    "@mui/styles": "^5.15.21",
     "@react-oauth/google": "^0.2.6",
     "@tailwindcss/forms": "0.4.0",
     "@testing-library/jest-dom": "^5.15.1",
@@ -16,7 +22,7 @@
     "react": "17.0.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.24.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1"
   },
@@ -24,7 +30,7 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-   "test": "react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,9 +53,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "10.4.2",
-    "postcss": "8.4.6",
-    "tailwindcss": "3.0.18",
     "vite": "^4.1.1",
     "vite-tsconfig-paths": "3.6.0"
   }
